tardis-macros/tests/macros_tests/fail_cases/unknown_index_type_test_fail.stderr
error: column_type:unknown_type is a not support custom type!
  --> tests/macros_tests/fail_cases/unknown_index_type_test_fail.rs:11:9
   |
11 |     pub aaa: String,
   |         ^^^
